<resources>
    <string name="app_name">DbayProject</string>
    <string name="creat_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Enter Password</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="signin">Sign In</string>
    <string name="signup">Create Account</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="orderhistory">Order History</string>
    <string name="logout">Log Out</string>
    <string name="home">HOME</string>
    <string name="shopping_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>