<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


<!--    <item-->
<!--        android:id="@+id/username"-->
<!--        android:icon="@drawable/ic_baseline_person_24"-->
<!--        android:title="UserName"/>-->

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

    <item
        android:id="@+id/shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop" />

    <item
        android:id="@+id/orderhistory"
        android:icon="@drawable/ic_history"
        android:title="@string/orderhistory" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>