<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.ui.RegisterActivity"
    android:padding="@dimen/mid_padding">


    <TextView
        android:id="@+id/textview_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creat_account"
        android:gravity="center"
        style="@style/user_title"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textview_errorMSG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Error: Something goes wrong. Please retry."
        android:inputType="text"
        android:textColor="@color/warning"
        app:layout_constraintBottom_toTopOf="@+id/edittext_firstname"/>

    <EditText
        android:id="@+id/edittext_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginTop="@dimen/big_margin"
        style="@style/signup_box"
        app:layout_constraintTop_toBottomOf="@+id/textview_create_account"/>

    <EditText
        android:id="@+id/edittext_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:layout_marginTop="@dimen/big_margin"
        style="@style/signup_box"
        app:layout_constraintTop_toBottomOf="@+id/edittext_firstname"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/big_margin"
        style="@style/signup_box"
        app:layout_constraintTop_toBottomOf="@+id/edittext_mobile"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/big_margin"
        style="@style/signup_box"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/textview_regi_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already Have An Account?"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_marginBottom="@dimen/big_margin"/>




</androidx.constraintlayout.widget.ConstraintLayout>