<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ui.LoginActivity"
    android:padding="@dimen/mid_padding">

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:gravity="center"
        style="@style/user_title"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textview_errorMSG"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Error: Something goes wrong. Please retry."
        android:textColor="@color/warning"
        app:layout_constraintBottom_toTopOf="@+id/edittext_email"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:text="ren@ren.com"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/big_margin"
        style="@style/signup_box"
        app:layout_constraintTop_toBottomOf="@+id/textview_login"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="12341234"
        style="@style/signup_box"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/textview_forgetPW"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="Forget Password?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="@dimen/big_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>